--- a/index.html
+++ b/index.html
@@ -1,11 +1,237 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, ">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <!-- Google Fonts -->
+  <link href="http://fonts.googleapis.com/css?family=Princess" rel="stylesheet" type="text/css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <link rel="stylesheet" href="mystyles.css">
+
 </head>
-<body>
-    <h1>welcome to my website</h1>
+
+<title>meghaa.CV</title>
+
+<body style="background-color:whitesmoke">
+  <div class="container">
+    <nav class="navbar navbar-dark bg-dark mb-3 style">
+      <a class="navbar-brand" style="color:white">meghaa.CV </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <li class="nav-item" role="presentation">
+            <a class="nav-link active" id="about-tab" data-toggle="tab" href="#about" role="tab" aria-controls="about"
+              aria-selected="true">About</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" id="skills-tab" data-toggle="tab" href="#skills" role="tab" aria-controls="skills"
+              aria-selected="false">skills</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" id="services-tab" data-toggle="tab" href="#services" role="tab" aria-controls="Services"
+              aria-selected="false">Services</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" id="experience-tab" data-toggle="tab" href="#experience" role="tab"
+              aria-controls="Experience" aria-selected="false">Experience</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" id="education-tab" data-toggle="tab" href="#education" role="tab"
+              aria-controls="Education" aria-selected="false">Education</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" id="portfolio-tab" data-toggle="tab" href="#portfolio" role="tab"
+              aria-controls="Portfolio" aria-selected="false">Portfolio</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" id="testimonials-tab" data-toggle="tab" href="#testimonials" role="tab"
+              aria-controls="Testimonials" aria-selected="false">Testimonials</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" id="contact -tab" data-toggle="tab" href="#contact" role="tab" aria-controls="Contact "
+              aria-selected="false">Contact </a>
+          </li>
+        </ul>
+        <script>
+          function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+              x.className += " responsive";
+            } else {
+              x.className = "topnav";
+            }
+          }
+        </script>
+    </nav>
+  </div>
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4 p-3" style="background-color:rgb(255, 255, 255);">
+        <div class="card text-white bg-dark mb-3 style" style="max-width:18rem;">
+
+          <img
+            src="https://fiverr-res.cloudinary.com/images/q_auto,f_auto/gigs/142819271/original/09dafa4104fa6aeca4e62f33326be4933ae7ccac/create-cartoon-profile-picture-abd7.jpg"
+            style="width:100%" class="card-img-top" alt="Meghaa">
+          <div class="card-body">
+            <h3>General Information</h3>
+            <p class="card-text-left">Name: Meghaa <br>
+              Location: Pondicherry,India <br>
+              Date of Birth: February 27,2002
+            </p>
+            <a href="https://instagram.com/meghaa2702" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-google"></a>
+            <a href="#" class="fa fa-youtube"></a>
+            <a href="#" class="fa fa-twitter"></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-8 p-3" style="background-color:rgb(255, 239, 213);">
+        <div class="tab-content" id="myTabContent">
+          <div class="tab-pane fade show active" id="about" role="tabpanel" aria-labelledby="about-tab">Lorem ipsum
+            dolor
+            sit amet, consectetur adipiscing elit. Maecenas sit amet iaculis ante. Aliquam sodales orci sed lectus
+            ultrices,
+            quis vestibulum dui interdum. Curabitur tristique dolor arcu, at placerat diam consequat et. Fusce lorem
+            felis,
+            pellentesque ac scelerisque fermentum, rutrum et tellus. Praesent posuere lorem in enim pellentesque
+            pharetra.
+            Pellentesque ut sodales nibh, vulputate commodo lacus. Proin ac faucibus nisi. Aliquam vestibulum iaculis
+            sagittis. Fusce gravida pulvinar finibus. Donec sollicitudin leo vel elit aliquam hendrerit. Morbi vitae
+            efficitur dolor, faucibus finibus nisl. Nunc malesuada nulla sit amet mauris fermentum porttitor. Ut
+            consectetur
+            mi et dapibus auctor. Nam ut interdum nulla. Maecenas a rutrum nisl, vitae ornare mauris. Duis tincidunt
+            augue
+            sit amet est dictum varius.
+
+          </div>
+
+          <div class="tab-pane fade" id="skills" role="tabpanel" aria-labelledby="skills-tab">Nullam quis tellus in ex
+            luctus
+            malesuada. Integer eu dolor et sapien porta ullamcorper. Cras at rhoncus purus. Vestibulum diam ligula,
+            scelerisque quis tincidunt eget, iaculis at lacus. Pellentesque a egestas leo. Pellentesque habitant morbi
+            tristique senectus et netus et malesuada fames ac turpis egestas. Nunc eleifend rutrum libero nec semper.
+            Etiam
+            facilisis, turpis eget cursus fermentum, erat sem dictum ante, id convallis nisl quam nec justo.
+          </div>
+
+          <div class="tab-pane fade" id="services" role="tabpanel" aria-labelledby="services-tab">Vestibulum tincidunt
+            luctus
+            nisi ac hendrerit. Nullam vitae sem pretium, placerat dui sed, aliquam libero. Suspendisse vehicula ligula
+            at
+            orci
+            suscipit rhoncus. Vestibulum lobortis felis eget urna porta bibendum. Suspendisse blandit, ex sed commodo
+            iaculis,
+            felis leo consequat lectus, in efficitur nunc est nec justo. Donec sed interdum justo. Donec a quam auctor,
+            vehicula nulla ac, maximus metus. Nulla id justo pharetra, rhoncus ligula at, vehicula neque. Pellentesque
+            eget
+            ultricies ante, ut auctor dolor. Sed gravida at augue ac faucibus. Duis porttitor, risus et blandit
+            pulvinar,
+            est
+            mauris dictum augue, quis commodo justo ex cursus ante. In hac habitasse platea dictumst. Nulla nunc nunc,
+            varius
+            nec nulla ut, pretium molestie neque. Donec a sodales erat. Praesent ut maximus velit. Duis pellentesque
+            erat
+            suscipit, porttitor neque sed, tempor felis.
+
+          </div>
+
+          <div class="tab-pane fade" id="experience" role="tabpanel" aria-labelledby="experience-tab">Vivamus tincidunt
+            lacus
+            ac ipsum semper elementum. Morbi posuere, arcu sit amet congue interdum, orci nisi gravida erat, eget congue
+            ante
+            ipsum sed sapien. Sed lobortis magna id odio pretium scelerisque. Cras ut mauris iaculis, porta purus vel,
+            sagittis nisl. Mauris dignissim metus sit amet quam aliquet, lacinia ultrices nisl ultrices. Proin
+            consectetur,
+            nibh at sodales faucibus, lorem lorem mattis elit, nec eleifend justo quam in diam. Donec nulla ligula,
+            rutrum
+            ut
+            ipsum a, aliquam sollicitudin mi. Vivamus ut aliquet dolor. Praesent non vulputate orci. In hac habitasse
+            platea
+            dictumst. Quisque viverra sapien at justo elementum, non dapibus nisi ornare.
+
+          </div>
+          <div class="tab-pane fade" id="education" role="tabpanel" aria-labelledby="education-tab">Mauris fringilla
+            felis
+            ut
+            dolor vehicula, lobortis mollis ante molestie. Cras ornare metus egestas, fermentum enim quis, pretium
+            neque.
+            Pellentesque commodo eu arcu in pulvinar. Morbi vitae pellentesque urna, eget molestie sapien. Nunc egestas
+            eu
+            lorem et interdum. Nulla vel massa massa. Cras lacinia lectus id elit semper faucibus.
+
+          </div>
+          <div class="tab-pane fade" id="portfolio" role="tabpanel" aria-labelledby="portfolio-tab">Quisque gravida
+            faucibus
+            ligula ac aliquam. In cursus posuere nunc, eget tristique nulla tempus sed. Aliquam condimentum neque
+            ullamcorper,
+            scelerisque dolor ut, ultrices lectus. Etiam sapien libero, porttitor quis elit eu, dapibus consectetur
+            justo.
+            Curabitur et molestie ante. Proin a purus odio. Aliquam elementum efficitur eros, et tempus ex vehicula at.
+            Sed
+            ante dolor, rutrum sed lorem vitae, varius tristique urna. Fusce dignissim purus leo, vel lobortis erat
+            aliquet
+            vitae. Aenean cursus interdum condimentum. Etiam commodo faucibus condimentum. Sed non tellus ac odio
+            egestas
+            sagittis ac quis metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+            curae;
+            Sed pretium non ligula at maximus.
+
+          </div>
+          <div class="tab-pane fade" id="testimonials" role="tabpanel" aria-labelledby="testimonials-tab">Pellentesque
+            efficitur ac lorem non molestie. Nam sed cursus nibh, sed posuere ligula. Integer ac metus dui. Interdum et
+            malesuada fames ac ante ipsum primis in faucibus. Integer sed velit ut ipsum dapibus vehicula. Duis sed elit
+            convallis, semper turpis in, lacinia tellus. Donec ac nisi ac sapien fringilla tempus. Proin vehicula massa
+            ac
+            nunc blandit, ut aliquet sem ornare. Quisque erat purus, auctor eu condimentum eget, facilisis eu dolor.
+
+          </div>
+          <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">Proin non consequat
+            magna.
+            Cras sodales mi lorem, sit amet semper ex cursus non. Nulla eu eros erat. Aenean non ultricies ante. Nam
+            pharetra
+            egestas pellentesque. Cras sed mi eget ante commodo pulvinar. Pellentesque tellus lectus, luctus non sapien
+            non,
+            vestibulum faucibus arcu. Maecenas a felis sodales, dapibus enim quis, cursus ipsum. Fusce ac ultrices
+            sapien.
+            Aliquam sed ex a massa pretium viverra. Ut ligula eros, ullamcorper et dui vitae, varius sagittis augue. In
+            hac
+            habitasse platea dictumst. Sed sollicitudin sagittis dictum.
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+
+
+
+
 </body>
+
 </html>
