--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body style="background-color:whitesmoke">
   <div class="container">
-    <nav class="navbar navbar-dark bg-dark mb-3 style">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3 style">
       <a class="navbar-brand" style="color:white">meghaa.CV </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,23 +64,14 @@
               aria-selected="false">Contact </a>
           </li>
         </ul>
-        <script>
-          function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-              x.className += " responsive";
-            } else {
-              x.className = "topnav";
-            }
-          }
-        </script>
+        
     </nav>
   </div>
 
 
   <div class="container">
     <div class="row">
-      <div class="col-sm-4 p-3" style="background-color:rgb(255, 255, 255);">
+      <div class="col-sm-2-6 p-3" style="background-color:rgb(255, 255, 255);">
         <div class="card text-white bg-dark mb-3 style" style="max-width:18rem;">
 
           <img
@@ -94,7 +85,7 @@
             </p>
             <a href="https://instagram.com/meghaa2702" class="fa fa-instagram"></a>
             <a href="#" class="fa fa-google"></a>
-            <a href="#" class="fa fa-youtube"></a>
+            <a href="#" class="fa fa-github"></a>
             <a href="#" class="fa fa-twitter"></a>
           </div>
         </div>
