--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </p>
             <a href="https://instagram.com/meghaa2702" class="fa fa-instagram"></a>
             <a href="#" class="fa fa-google"></a>
-            <a href="#" class="fa fa-github"></a>
+            <a href="meghaapunniya.github.io" class="fa fa-github"></a>
             <a href="#" class="fa fa-twitter"></a>
           </div>
         </div>
