--- a/index.html
+++ b/index.html
@@ -30,40 +30,42 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
+        <div class="row">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
-          <li class="nav-item" role="presentation">
+          <li class="nav-item col-md" role="presentation">
             <a class="nav-link active" id="about-tab" data-toggle="tab" href="#about" role="tab" aria-controls="about"
               aria-selected="true">About</a>
           </li>
-          <li class="nav-item" role="presentation">
+          <li class="nav-item col-md" role="presentation">
             <a class="nav-link" id="skills-tab" data-toggle="tab" href="#skills" role="tab" aria-controls="skills"
               aria-selected="false">skills</a>
           </li>
-          <li class="nav-item" role="presentation">
+          <li class="nav-item col-md" role="presentation">
             <a class="nav-link" id="services-tab" data-toggle="tab" href="#services" role="tab" aria-controls="Services"
               aria-selected="false">Services</a>
           </li>
-          <li class="nav-item" role="presentation">
+          <li class="nav-item col-md" role="presentation">
             <a class="nav-link" id="experience-tab" data-toggle="tab" href="#experience" role="tab"
               aria-controls="Experience" aria-selected="false">Experience</a>
           </li>
-          <li class="nav-item" role="presentation">
+          <li class="nav-item col-md" role="presentation">
             <a class="nav-link" id="education-tab" data-toggle="tab" href="#education" role="tab"
               aria-controls="Education" aria-selected="false">Education</a>
           </li>
-          <li class="nav-item" role="presentation">
+          <li class="nav-item col-md" role="presentation">
             <a class="nav-link" id="portfolio-tab" data-toggle="tab" href="#portfolio" role="tab"
               aria-controls="Portfolio" aria-selected="false">Portfolio</a>
           </li>
-          <li class="nav-item" role="presentation">
+          <li class="nav-item col-md" role="presentation">
             <a class="nav-link" id="testimonials-tab" data-toggle="tab" href="#testimonials" role="tab"
               aria-controls="Testimonials" aria-selected="false">Testimonials</a>
           </li>
-          <li class="nav-item" role="presentation">
+          <li class="nav-item col-md" role="presentation">
             <a class="nav-link" id="contact -tab" data-toggle="tab" href="#contact" role="tab" aria-controls="Contact "
               aria-selected="false">Contact </a>
           </li>
         </ul>
+        </div>
         
     </nav>
   </div>
@@ -71,22 +73,24 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-sm-2-6 p-3" style="background-color:rgb(255, 255, 255);">
-        <div class="card text-white bg-dark mb-3 style" style="max-width:18rem;">
+      <div class="col-sm-4 p-3" style="background-color:rgb(255, 255, 255);">
+        <div class="card text-white bg-dark mb-3 style">
 
           <img
             src="https://fiverr-res.cloudinary.com/images/q_auto,f_auto/gigs/142819271/original/09dafa4104fa6aeca4e62f33326be4933ae7ccac/create-cartoon-profile-picture-abd7.jpg"
-            style="width:100%" class="card-img-top" alt="Meghaa">
+            class="card-img-top" alt="Meghaa">
           <div class="card-body">
             <h3>General Information</h3>
             <p class="card-text-left">Name: Meghaa <br>
               Location: Pondicherry,India <br>
               Date of Birth: February 27,2002
             </p>
+            <div style="text-align: center;">
             <a href="https://instagram.com/meghaa2702" class="fa fa-instagram"></a>
             <a href="#" class="fa fa-google"></a>
             <a href="meghaapunniya.github.io" class="fa fa-github"></a>
             <a href="#" class="fa fa-twitter"></a>
+            </div>
           </div>
         </div>
       </div>
