--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h3>General Information</h3>
             <p class="card-text-left">Name: Meghaa <br>
               Location: Pondicherry,India <br>
-              Date of Birth: February 27,2002
+              Student at PONDICHERRY-UNIVERSITY
             </p>
             <div style="text-align: center;">
             <a href="https://instagram.com/meghaa2702" class="fa fa-instagram"></a>
@@ -197,6 +197,46 @@
     </div>
   </div>
 
+    <!-- Footer -->
+<footer class="page-footer font-small cyan darken-3">
+  <div class="footer-bg">
+    <!-- Footer Elements -->
+    <div class="container">
+
+      <!-- Grid row-->
+      <div class="row">
+
+        <!-- Grid column -->
+        <div class="col-md-12 py-5">
+          <div class="mb-5 flex-center">
+            <h4 style="text-align: center;"> I am available for freelance projects.</h4>
+            <h1 style="text-align: center;">Let's work together indeed!</h1>
+            <p style="align-content: center;">
+              <button type="button" class="btn btn-success"
+                style="margin-left:auto;margin-right:auto;display:block;margin-top:22%;margin-bottom:0%">Hire
+                me</button>
+            </p>
+          </div>
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row-->
+
+    </div>
+  </div>
+  <!-- Footer Elements -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3" style="background-color: #a593c2;">© 2020 Copyright: 
+    <a style="color:whitesmoke" href="meghaapunniya.github.io">meghaapunniya.github.io</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
+    
+    
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
