--- a/index.html
+++ b/index.html
@@ -93,7 +93,29 @@
 
       <div class="col-sm-8 p-3" style="background-color:rgb(255, 239, 213);">
         <div class="tab-content" id="myTabContent">
-          <div class="tab-pane fade show active" id="about" role="tabpanel" aria-labelledby="about-tab">Lorem ipsum
+          <div class="tab-pane fade show active" id="about" role="tabpanel" aria-labelledby="about-tab">
+            <h2 style="font-size:large; text-align: center; font-family:Georgia, 'Times New Roman', Times, serif;">HTML & CSS
+              Developer</h2>
+            <h1 style="color:darkgray; text-align: center;font-family:fantasy;">
+              Meghaa
+            </h1>
+            <h3 style="color:darkslategrey; font-family:monospace;">Description<i class="fa fa-id-badge" aria-hidden="true"></i>
+            </h3>
+            <div style="font-family: cursive;">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
+              magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+              commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+              pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+              id
+              est laborum.
+          
+            </div>
+          </div>
+
+          <div class="tab-pane fade" id="skills" role="tabpane" aria-labelledby="skills-tab" style="font-family: cursive;">
+            Lorem ipsum
             dolor
             sit amet, consectetur adipiscing elit. Maecenas sit amet iaculis ante. Aliquam sodales orci sed lectus
             ultrices,
@@ -108,19 +130,10 @@
             mi et dapibus auctor. Nam ut interdum nulla. Maecenas a rutrum nisl, vitae ornare mauris. Duis tincidunt
             augue
             sit amet est dictum varius.
-
           </div>
 
-          <div class="tab-pane fade" id="skills" role="tabpanel" aria-labelledby="skills-tab">Nullam quis tellus in ex
-            luctus
-            malesuada. Integer eu dolor et sapien porta ullamcorper. Cras at rhoncus purus. Vestibulum diam ligula,
-            scelerisque quis tincidunt eget, iaculis at lacus. Pellentesque a egestas leo. Pellentesque habitant morbi
-            tristique senectus et netus et malesuada fames ac turpis egestas. Nunc eleifend rutrum libero nec semper.
-            Etiam
-            facilisis, turpis eget cursus fermentum, erat sem dictum ante, id convallis nisl quam nec justo.
-          </div>
-
-          <div class="tab-pane fade" id="services" role="tabpanel" aria-labelledby="services-tab">Vestibulum tincidunt
+          <div class="tab-pane fade" id="services" role="tabpanel" aria-labelledby="services-tab" style="font-family: cursive;">
+            Vestibulum tincidunt
             luctus
             nisi ac hendrerit. Nullam vitae sem pretium, placerat dui sed, aliquam libero. Suspendisse vehicula ligula
             at
@@ -141,7 +154,8 @@
 
           </div>
 
-          <div class="tab-pane fade" id="experience" role="tabpanel" aria-labelledby="experience-tab">Vivamus tincidunt
+          <div class="tab-pane fade" id="experience" role="tabpanel" aria-labelledby="experience-tab" style="font-family: cursive;">
+            Vivamus tincidunt
             lacus
             ac ipsum semper elementum. Morbi posuere, arcu sit amet congue interdum, orci nisi gravida erat, eget congue
             ante
@@ -156,7 +170,8 @@
             dictumst. Quisque viverra sapien at justo elementum, non dapibus nisi ornare.
 
           </div>
-          <div class="tab-pane fade" id="education" role="tabpanel" aria-labelledby="education-tab">Mauris fringilla
+          <div class="tab-pane fade" id="education" role="tabpanel" aria-labelledby="education-tab" style="font-family: cursive;">
+            Mauris fringilla
             felis
             ut
             dolor vehicula, lobortis mollis ante molestie. Cras ornare metus egestas, fermentum enim quis, pretium
@@ -166,7 +181,8 @@
             lorem et interdum. Nulla vel massa massa. Cras lacinia lectus id elit semper faucibus.
 
           </div>
-          <div class="tab-pane fade" id="portfolio" role="tabpanel" aria-labelledby="portfolio-tab">Quisque gravida
+          <div class="tab-pane fade" id="portfolio" role="tabpanel" aria-labelledby="portfolio-tab" style="font-family: cursive;">
+            Quisque gravida
             faucibus
             ligula ac aliquam. In cursus posuere nunc, eget tristique nulla tempus sed. Aliquam condimentum neque
             ullamcorper,
@@ -183,7 +199,8 @@
             Sed pretium non ligula at maximus.
 
           </div>
-          <div class="tab-pane fade" id="testimonials" role="tabpanel" aria-labelledby="testimonials-tab">Pellentesque
+          <div class="tab-pane fade" id="testimonials" role="tabpanel" aria-labelledby="testimonials-tab" style="font-family: cursive;">
+            Pellentesque
             efficitur ac lorem non molestie. Nam sed cursus nibh, sed posuere ligula. Integer ac metus dui. Interdum et
             malesuada fames ac ante ipsum primis in faucibus. Integer sed velit ut ipsum dapibus vehicula. Duis sed elit
             convallis, semper turpis in, lacinia tellus. Donec ac nisi ac sapien fringilla tempus. Proin vehicula massa
@@ -191,6 +208,7 @@
             nunc blandit, ut aliquet sem ornare. Quisque erat purus, auctor eu condimentum eget, facilisis eu dolor.
 
           </div>
+
         </div>
       </div>
 
