--- a/index.html
+++ b/index.html
@@ -231,10 +231,19 @@
             <h4 style="text-align: center;"> I am available for freelance projects.</h4>
             <h1 style="text-align: center;">Let's work together indeed!</h1>
             <p style="align-content: center;">
+              <div class="form1">
+                <form>
+                 <label>
+                   
+                 </label>
+                </form> 
+             </div>
               <button type="button" class="btn btn-success"
                 style="margin-left:auto;margin-right:auto;display:block;margin-top:22%;margin-bottom:0%">Hire
                 me</button>
             </p>
+            
+
           </div>
         </div>
         <!-- Grid column -->
