--- a/index.html
+++ b/index.html
@@ -1078,7 +1078,7 @@
         </div>
       </div>
       <div class="hero-img" data-aos="fade-left">
-        <img src="https://fiverr-res.cloudinary.com/images/q_auto,f_auto/gigs/142819271/original/09dafa4104fa6aeca4e62f33326be4933ae7ccac/create-cartoon-profile-picture-abd7.jpg" alt="Meghaa Punniyamoorthy">
+        <img src="https://drive.google.com/thumbnail?id=1NVhccYw-N6QhEmqqqZGjTvEFKvK01emc" alt="Meghaa Punniyamoorthy">
       </div>
     </div>
   </section>
