--- a/index.html
+++ b/index.html
@@ -1239,10 +1239,11 @@
             <span class="timeline-date">January 2024 - Present</span>
             <h3>Software Engineer</h3>
             <h4>HIGHBROW TECHNOLOGY INC. | Remote, India</h4>
-            <p>Working on Application Tracking and Recruitment Systems to enhance the recruitment process.</p>
-            <p>Developing email marketing applications for bulk campaigns tailored to client needs.</p>
-            <p>Creating dynamic, browser-compatible pages using React JS and Next JS.</p>
-            <p>Serving as an LLM trainer for X-AI and Gemini, focusing on aesthetic and functional web applications.</p>
+            <p>Worked on Application Tracking and Recruitment Systems to enhance the recruitment process.</p>
+            <p>Developed email marketing application for bulk campaigns tailored to client needs.</p>
+            <p>Created dynamic, browser-compatible pages using React JS and Next JS.</p>
+            <p>Served as an LLM trainer for X-AI, focusing on modern and functional web applications.</p>
+            <p>Currently, Serving as an LLM trainer for Gemini, focusing on aesthetic and fully-working web applications.</p>
           </div>
         </div>
         <div class="timeline-item" data-aos="fade-left">
